.metadata/.plugins/org.eclipse.cdt.ui/led-disco2.build.log
12:36:20 **** Build of configuration Debug for project led-disco2 ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../USB_HOST/App -I../USB_HOST/Target -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:4:1: error: unknown type name 'UART_HandleTypeDef'; did you mean 'HCD_HandleTypeDef'?
    4 | UART_HandleTypeDef huart2;
      | ^~~~~~~~~~~~~~~~~~
      | HCD_HandleTypeDef
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:21:5: warning: implicit declaration of function 'HAL_UART_Receive_IT'; did you mean 'HAL_SPI_Receive_IT'? [-Wimplicit-function-declaration]
   21 |     HAL_UART_Receive_IT(&huart2, &rxData, 1);
      |     ^~~~~~~~~~~~~~~~~~~
      |     HAL_SPI_Receive_IT
../Core/Src/main.c: At top level:
../Core/Src/main.c:29:30: error: unknown type name 'UART_HandleTypeDef'; did you mean 'HCD_HandleTypeDef'?
   29 | void HAL_UART_RxCpltCallback(UART_HandleTypeDef *huart)
      |                              ^~~~~~~~~~~~~~~~~~
      |                              HCD_HandleTypeDef
../Core/Src/main.c: In function 'MX_USART2_UART_Init':
../Core/Src/main.c:49:11: error: request for member 'Instance' in something not a structure or union
   49 |     huart2.Instance = USART2;
      |           ^
../Core/Src/main.c:50:11: error: request for member 'Init' in something not a structure or union
   50 |     huart2.Init.BaudRate = 9600;
      |           ^
../Core/Src/main.c:51:11: error: request for member 'Init' in something not a structure or union
   51 |     huart2.Init.WordLength = UART_WORDLENGTH_8B;
      |           ^
../Core/Src/main.c:51:30: error: 'UART_WORDLENGTH_8B' undeclared (first use in this function)
   51 |     huart2.Init.WordLength = UART_WORDLENGTH_8B;
      |                              ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:51:30: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:52:11: error: request for member 'Init' in something not a structure or union
   52 |     huart2.Init.StopBits = UART_STOPBITS_1;
      |           ^
../Core/Src/main.c:52:28: error: 'UART_STOPBITS_1' undeclared (first use in this function)
   52 |     huart2.Init.StopBits = UART_STOPBITS_1;
      |                            ^~~~~~~~~~~~~~~
../Core/Src/main.c:53:11: error: request for member 'Init' in something not a structure or union
   53 |     huart2.Init.Parity = UART_PARITY_NONE;
      |           ^
../Core/Src/main.c:53:26: error: 'UART_PARITY_NONE' undeclared (first use in this function)
   53 |     huart2.Init.Parity = UART_PARITY_NONE;
      |                          ^~~~~~~~~~~~~~~~
../Core/Src/main.c:54:11: error: request for member 'Init' in something not a structure or union
   54 |     huart2.Init.Mode = UART_MODE_TX_RX;
      |           ^
../Core/Src/main.c:54:24: error: 'UART_MODE_TX_RX' undeclared (first use in this function)
   54 |     huart2.Init.Mode = UART_MODE_TX_RX;
      |                        ^~~~~~~~~~~~~~~
../Core/Src/main.c:55:11: error: request for member 'Init' in something not a structure or union
   55 |     huart2.Init.HwFlowCtl = UART_HWCONTROL_NONE;
      |           ^
../Core/Src/main.c:55:29: error: 'UART_HWCONTROL_NONE' undeclared (first use in this function)
   55 |     huart2.Init.HwFlowCtl = UART_HWCONTROL_NONE;
      |                             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:56:11: error: request for member 'Init' in something not a structure or union
   56 |     huart2.Init.OverSampling = UART_OVERSAMPLING_16;
      |           ^
../Core/Src/main.c:56:32: error: 'UART_OVERSAMPLING_16' undeclared (first use in this function)
   56 |     huart2.Init.OverSampling = UART_OVERSAMPLING_16;
      |                                ^~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:58:9: warning: implicit declaration of function 'HAL_UART_Init'; did you mean 'HAL_HCD_Init'? [-Wimplicit-function-declaration]
   58 |     if (HAL_UART_Init(&huart2) != HAL_OK)
      |         ^~~~~~~~~~~~~
      |         HAL_HCD_Init
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

12:36:21 Build Failed. 17 errors, 2 warnings. (took 998ms)

